[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "desilike"
authors = [
    {name = "cosmodesi"},
    {name = "Arnaud De Mattia"},
    {name = "Johannes U. Lange", email = "jlange@american.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: BSD License"]
dynamic = ["version", "description"]
requires-python = ">= 3.10"
dependencies = [
    "numpy>=1.18.0",
    "scipy",
    "pyyaml",
    "mpi4py",
    "cosmoprimo @ git+https://github.com/cosmodesi/cosmoprimo",
    "lsstypes @ git+https://github.com/adematti/lsstypes"]

[project.optional-dependencies]
tests = [
    "emcee",
    "pyclass @ git+https://github.com/adematti/pyclass"]
plotting = [
    "matplotlib",
    "tabulate",
    "getdist",
    "anesthetic"]
jax = [
    "jax",
    "interpax"]

[project.urls]
Home = "https://desilike.readthedocs.io/en/latest/"

[tool.flit]
sdist.exclude = ["doc", ".gitignore", ".github", ".readthedocs.yaml"]
module.name = "desilike"
